# id3gbk

./: .gitignore  HISTORY.md  README.md  activate.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py
src/id3gbk/: main.py
