[project]
name = "id3gbk"
version = "0.0.3"
description = "Convert GBK encoding to UTF-8 in ID3 or APE tag"
readme = "README.md"
licnese = { text = "MIT" }

requires-python = ">=3.12.13"
dependencies = [
    "chardet",
    "mutagen",
]

[project.scripts]
id3gbk = "id3gbk.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/id3gbk",
]
